--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-
   "scripts": {
     "start": "node app.js",
-    "dev": "npx nodemon index.js"
+    "dev": "npx nodemon index.js",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules ENV=test PORT=8281 npx jest"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
@@ -19,6 +20,9 @@
     "pg": "^8.11.3"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "cross-env": "^7.0.3",
+    "jest": "^29.6.4",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   }
 }
