--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node app.js",
+    "start": "node .",
     "dev": "npx nodemon index.js",
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules ENV=test PORT=8281 npx jest"
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules ENV=test PORT=8281  npx jest --forceExit"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
