--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "mssql": "^10.0.0",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
